stylus/main.styl
@import 'nib'
@import 'colors'

HERO_FONT = 'adelle', Helvetica, serif
BODY_FONT = 'proxima-nova', Helvetica, sans-serif
FORM_FONT = 'Lucida Grande', sans-serif

HEADER_HEIGHT = 50px
HERO_HEIGHT = 400px + HEADER_HEIGHT
BROWSE_MENU_HEIGHT = 270px

HEADER_BORDER = 1px solid rgba(255, 255, 255, 0.6)
SOLID_HEADER_BORDER = 1px solid GRAY_LIGHT
HEADER_BORDER_FOCUS = 3px solid #FFF
SOLID_HEADER_BORDER_FOCUS = 3px solid #000

PHONE = 'only screen and (max-width: 799px)'
TABLET = 'only screen and (min-width: 800px) and (max-width: 1099px)'
DESKTOP = 'only screen and (min-width: 1100px)'

PHONE_FONT_SIZE = 15px
TABLET_FONT_SIZE = 16px
DESKTOP_FONT_SIZE = 18px

SIDEBAR_WIDTH = 336px

GUTTER_PHONE = 0px
GUTTER_TABLET = 18px
GUTTER_DESKTOP = 36px

CONTENT_PADDING_PHONE = 18px
CONTENT_PADDING_TABLET = 36px
CONTENT_PADDING_DESKTOP = 54px

MAX_WIDTH = 1050px


// For convenience, when styling links

LINK = '&:link, &:visited'
HOVER = '&:hover, &:focus, &:active'

.clearfix:before, .clearfix:after
  content: ""
  display: table

.clearfix:after
  clear: both

.off
  display: none

.gray
  color: GRAY

.red
  color: red

.center
  text-align: center

.strong
  font-weight: bold

.row
  clear: both
  width: 100%

  @media PHONE
    margin-bottom: (CONTENT_PADDING_PHONE / 2)
  @media TABLET
    margin-bottom: (CONTENT_PADDING_TABLET / 2)
  @media DESKTOP
    margin-bottom: (CONTENT_PADDING_DESKTOP / 2)

  &:last-child
    margin-bottom: 0

.row:before, .row:after // clearfix
  content: ""
  display: table
.row:after
  clear: both

.col
  float: left
  vertical-align: top

.col2
  @extend .col
  width: 50%

  &:first-child
    padding-right: 7px
  &:last-child
    padding-left: 7px

.col3
  @extend .col
  width: 33.3%
  &:first-child
    padding-right: 10px
  &:nth-child(2)
    padding-left: 5px
    padding-right: 5px
  &:last-child
    padding-left: 10px

.col4
  @extend .col
  width: 25%
  &:first-child
    padding-right: 10px
  &:nth-child(2), &:nth-child(3)
    padding-left: 5px
    padding-right: 5px
  &:last-child
    padding-left: 10px

ellipsis()
  overflow: hidden
  text-overflow: ellipsis
  white-space: nowrap

.hide-phone
  @media PHONE
    display: none !important
.hide-tablet
  @media TABLET
    display: none !important

*, *:before, *:after
  box-sizing: border-box

html
  overflow-y: scroll

body
  background: #F4F4F4 url(cdnOrigin + '/images/body.gif')
  color: GRAY_DARKEST
  font-family: BODY_FONT
  font-size: 18px
  line-height: 1.5em
  margin: 0
  padding: 0
  -webkit-font-smoothing: antialiased

  @media PHONE
    font-size: PHONE_FONT_SIZE
    line-height: 1.5em
  @media TABLET
    font-size: TABLET_FONT_SIZE
    line-height: 1.5em
  @media DESKTOP
    font-size: DESKTOP_FONT_SIZE
    line-height: 1.5em

img, iframe, video
  max-width: 100%

img, video
  @media PHONE
    margin-bottom: (PHONE_FONT_SIZE * 1.5)px
  @media TABLET
    margin-bottom: (TABLET_FONT_SIZE * 1.5)px
  @media DESKTOP
    margin-bottom: (DESKTOP_FONT_SIZE * 1.5)px

ul, ol, pre
  margin: 0 0 1.5em 0
  padding: 0

a
  {LINK}
    color: BLUE
    text-decoration: none

  {HOVER}
    color: BLUE_DARK
    text-decoration: underline

a[href^="mailto"]
  font-weight: bold

h1, h2, h3, h4, h5
  font-family: HERO_FONT
  font-weight: 500
  margin: 0
  text-rendering: optimizelegibility

  .btn
    float: right

h1, .hero .title
  font-size: 2.3em
  line-height: (3 / 2.3)em
  margin-bottom: (1.5 / 2.3)em
h2, .hero .desc
  font-size: 1.5em
  line-height: (1.5 / 1.5)em
  margin-bottom: (1.5 / 1.5)em
h3
  font-size: 1.2em
  line-height: (1.5 / 1.2)em
  margin-bottom: (1.5 / 1.2)em
h4
  font-size: 1.125em
  line-height: (1.5 / 1.125)em
  margin-bottom: (1.5 / 1.125)em
h5
  font-size: 1em
  line-height: (1.5 / 1)em
  margin-bottom: 1.5em

p
  margin: 0 0 1.5em 0

hr
  background-color: GRAY_LIGHTER
  border: 0
  color: GRAY_LIGHTER
  height: 1px
  margin: 30px 0

//
// CONTENT
//

.wrap
  margin: 0 auto
  max-width: MAX_WIDTH
  padding-top: HEADER_HEIGHT
  position: relative
  width: 100%

  body.study-guides &
    max-width: 900px

  @media PHONE
    padding-left: GUTTER_PHONE
    padding-right: GUTTER_PHONE
  @media TABLET
    padding-left: GUTTER_TABLET
    padding-right: GUTTER_TABLET
  @media DESKTOP
    padding-left: GUTTER_DESKTOP
    padding-right: GUTTER_DESKTOP

  html.main-sidebar &
    @media PHONE
      max-width: 100%
    @media TABLET
      max-width: MAX_WIDTH + SIDEBAR_WIDTH + GUTTER_TABLET
    @media DESKTOP
      max-width: MAX_WIDTH + SIDEBAR_WIDTH + GUTTER_DESKTOP

.contentWrapper
  float: left
  width: 100%

  @media PHONE
    float: none
  @media TABLET
    margin-right: -(SIDEBAR_WIDTH + GUTTER_TABLET)
  @media DESKTOP
    margin-right: -(SIDEBAR_WIDTH + GUTTER_DESKTOP)

.content, .twitter-timeline
  border-radius: 3px
  box-shadow: 0 2px 16px rgba(0, 0, 0, 0.5)

.content
  background: #FFF

  html.main-sidebar &
    @media PHONE
      margin-right: 0
    @media TABLET
      margin-right: SIDEBAR_WIDTH + GUTTER_TABLET
    @media DESKTOP
      margin-right: SIDEBAR_WIDTH + GUTTER_DESKTOP

  @media PHONE
    border-radius: 0
    padding: CONTENT_PADDING_PHONE
  @media TABLET
    padding: CONTENT_PADDING_TABLET
  @media DESKTOP
    padding: CONTENT_PADDING_DESKTOP

  .like
    height: 26px

  .pull-left
    margin: 20px 20px 10px 0
    float: left

  .pull-right
    margin: 0 0 10px 20px
    float: right

body.signup, body.signup2
  background: center center url(cdnOrigin + '/images/hero/colleges.jpg') no-repeat fixed
  background-size: cover

body.login
  background: center center url(cdnOrigin + '/images/hero/ucla.jpg') no-repeat fixed
  background-size: cover

body.home
  .hero .totalHits
    display: inline-block
    @media DESKTOP
      min-width: 145px
    @media TABLET
      min-width: 150px
    @media DESKTOP
      min-width: 175px

@import 'header'
@import 'browseMenu'
@import 'hero'
@import 'list'
@import 'toolbar'
@import 'buttons'
@import 'sidebar'
@import 'note'
@import 'user'
@import 'essay'
@import 'footer'
@import 'form'
@import 'submit'
@import 'editor'
@import 'expandify'

